# ABChat

./: .gitignore  CMakeLists.txt  README.md  global.cpp  global.h  httpmgr.cpp  httpmgr.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerdialog.cpp  registerdialog.h  registerdialog.ui  singleton.h
style/: stylesheet.qss
